# temperature-monitor-api

./: .gitignore  Cargo.toml  Dockerfile  README.md  k8s-deployment.yaml
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml
helm/: values-branch.yaml  values-dev.yaml
helm/temperature-monitor-api/: Chart.yaml  values.yaml
helm/temperature-monitor-api/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
src/: main.rs
